Update LynxeProperties to change default browser request timeout to 30 seconds. Enhance LynxeController with a new method to build memory names from user input, improving conversation memory handling. Refactor MemoryController to integrate chat messages into conversation history and create PlanExecutionRecord for chat interactions. Update MemoryService to add chat IDs with meaningful memory names based on user input. Fix thread ID retrieval in multiple services for consistency.