@@ -15,10 +15,6 @@
  */
 package com.alibaba.cloud.ai.lynxe.workspace.conversation.service;
 
-import java.sql.ResultSet;
-import java.sql.SQLException;
-import java.sql.Timestamp;
-import java.time.LocalDateTime;
 import java.time.ZoneId;
 import java.util.ArrayList;
 import java.util.List;
@@ -27,14 +23,10 @@ import java.util.stream.Collectors;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.ai.chat.memory.ChatMemory;
-import org.springframework.ai.chat.messages.MessageType;
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.jdbc.core.JdbcTemplate;
-import org.springframework.jdbc.core.RowMapper;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
-import com.alibaba.cloud.ai.lynxe.recorder.entity.vo.PlanExecutionRecord;
 import com.alibaba.cloud.ai.lynxe.workspace.conversation.entity.po.MemoryEntity;
 import com.alibaba.cloud.ai.lynxe.workspace.conversation.entity.vo.Memory;
 import com.alibaba.cloud.ai.lynxe.workspace.conversation.repository.MemoryRepository;
@@ -55,9 +47,6 @@ public class MemoryServiceImpl implements MemoryService {
 
 	@Autowired
 	private ChatMemory chatMemory;
-
-	@Autowired
-	private JdbcTemplate jdbcTemplate;
 
 	/**
 	 * Convert MemoryEntity to Memory VO
@@ -171,7 +160,7 @@ public class MemoryServiceImpl implements MemoryService {
 		// 4. Thread ID to handle concurrent conversation creation
 		long timestamp = System.nanoTime();
 		int randomComponent = (int) (Math.random() * 10000);
-		long threadId = Thread.currentThread().threadId();
+		long threadId = Thread.currentThread().getId();
 
 		String conversationId = String.format("%s%d_%d_%d", conversationPrefix, timestamp, randomComponent, threadId);
 
@@ -212,162 +201,80 @@ public class MemoryServiceImpl implements MemoryService {
 		}
 	}
 
-	/**
-	 * Helper class to represent a chat message with timestamp
-	 */
-	private static class ChatMessageWithTimestamp {
-
-		private String content;
-
-		private MessageType type;
-
-		private LocalDateTime timestamp;
-
-		public ChatMessageWithTimestamp(String content, MessageType type, LocalDateTime timestamp) {
-			this.content = content;
-			this.type = type;
-			this.timestamp = timestamp;
-		}
-
-		public String getContent() {
-			return content;
-		}
-
-		public MessageType getType() {
-			return type;
-		}
-
-		public LocalDateTime getTimestamp() {
-			return timestamp;
-		}
-
-	}
-
 	@Override
-	public List<PlanExecutionRecord> getChatMessagesAsPlanRecords(String conversationId) {
-		List<PlanExecutionRecord> chatRecords = new ArrayList<>();
+	public void addChatToConversation(String conversationId, String chatId, String memoryName) {
+		if (conversationId == null || conversationId.trim().isEmpty()) {
+			logger.warn("Cannot add chat to null or empty conversationId");
+			return;
+		}
+
+		if (chatId == null || chatId.trim().isEmpty()) {
+			logger.warn("Cannot add null or empty chatId to conversation {}", conversationId);
+			return;
+		}
 
 		try {
-			// Query chat messages with timestamps from ai_chat_memory table
-			// Use a database-agnostic query that works with H2, MySQL, and PostgreSQL
-			String query = "SELECT content, type, timestamp FROM ai_chat_memory WHERE conversation_id = ? ORDER BY timestamp";
-
-			List<ChatMessageWithTimestamp> messages = jdbcTemplate.query(query,
-					new RowMapper<ChatMessageWithTimestamp>() {
-						@Override
-						public ChatMessageWithTimestamp mapRow(ResultSet rs, int rowNum) throws SQLException {
-							String content = rs.getString("content");
-							MessageType type = MessageType.valueOf(rs.getString("type"));
-							Timestamp timestamp = rs.getTimestamp("timestamp");
-							LocalDateTime localDateTime = timestamp != null ? timestamp.toLocalDateTime()
-									: LocalDateTime.now();
-							return new ChatMessageWithTimestamp(content, type, localDateTime);
-						}
-					}, conversationId);
-
-			if (messages.isEmpty()) {
-				logger.debug("No chat messages found for conversationId: {}", conversationId);
-				return chatRecords;
+			MemoryEntity memoryEntity = memoryRepository.findByConversationId(conversationId);
+			if (memoryEntity == null) {
+				// Create new memory with provided memory name
+				String finalMemoryName = (memoryName != null && !memoryName.trim().isEmpty())
+						? sanitizeMemoryName(memoryName) : "Chat Conversation";
+				logger.info("Creating new memory for conversationId: {} with chatId: {} and memoryName: {}",
+						conversationId, chatId, finalMemoryName);
+				memoryEntity = new MemoryEntity(conversationId, finalMemoryName);
 			}
-
-			logger.debug("Found {} chat messages for conversationId: {}", messages.size(), conversationId);
-
-			// Group USER and ASSISTANT messages into pairs
-			// Each pair represents one chat round (user question + assistant response)
-			ChatMessageWithTimestamp currentUserMessage = null;
-			ChatMessageWithTimestamp currentAssistantMessage = null;
-			LocalDateTime userMessageTime = null;
-
-			for (ChatMessageWithTimestamp message : messages) {
-				if (message.getType() == MessageType.USER) {
-					// If we have a previous pair, save it before starting a new one
-					if (currentUserMessage != null && currentAssistantMessage != null) {
-						PlanExecutionRecord record = createChatPlanRecord(conversationId, currentUserMessage,
-								currentAssistantMessage, userMessageTime);
-						chatRecords.add(record);
+			else {
+				// Update memory name if provided and different from current
+				if (memoryName != null && !memoryName.trim().isEmpty()) {
+					String sanitizedMemoryName = sanitizeMemoryName(memoryName);
+					if (!sanitizedMemoryName.equals(memoryEntity.getMemoryName())) {
+						logger.debug("Updating memory name from '{}' to '{}' for conversationId: {}",
+								memoryEntity.getMemoryName(), sanitizedMemoryName, conversationId);
+						memoryEntity.setMemoryName(sanitizedMemoryName);
 					}
-					// Start a new pair
-					currentUserMessage = message;
-					currentAssistantMessage = null;
-					userMessageTime = message.getTimestamp();
-				}
-				else if (message.getType() == MessageType.ASSISTANT && currentUserMessage != null) {
-					// Complete the pair with assistant response
-					currentAssistantMessage = message;
-				}
-				// Ignore SYSTEM and TOOL messages for now
-			}
-
-			// Handle the last pair if it exists
-			if (currentUserMessage != null) {
-				if (currentAssistantMessage != null) {
-					// Complete pair
-					PlanExecutionRecord record = createChatPlanRecord(conversationId, currentUserMessage,
-							currentAssistantMessage, userMessageTime);
-					chatRecords.add(record);
-				}
-				else {
-					// User message without assistant response (might be in progress)
-					PlanExecutionRecord record = createChatPlanRecord(conversationId, currentUserMessage, null,
-							userMessageTime);
-					chatRecords.add(record);
 				}
 			}
 
-			logger.debug("Converted {} chat messages into {} PlanExecutionRecord objects", messages.size(),
-					chatRecords.size());
+			// Add the chat ID (similar to rootPlanId for plan execution)
+			memoryEntity.addRootPlanId(chatId);
+			memoryRepository.save(memoryEntity);
 
+			logger.info("Added chatId {} to conversation {} with memoryName: {}", chatId, conversationId,
+					memoryEntity.getMemoryName());
 		}
 		catch (Exception e) {
-			logger.warn("Error retrieving chat messages for conversationId: {}", conversationId, e);
-			// Return empty list instead of failing
+			logger.error("Failed to add chatId {} to conversation {}", chatId, conversationId, e);
 		}
-
-		return chatRecords;
 	}
 
 	/**
-	 * Create a PlanExecutionRecord from a chat message pair
-	 * @param conversationId The conversation ID
-	 * @param userMessage The user message
-	 * @param assistantMessage The assistant message (can be null if not yet received)
-	 * @param startTime The timestamp of the user message
-	 * @return PlanExecutionRecord representing the chat round
+	 * Sanitize memory name to ensure it's suitable for display
+	 * Limits length and removes problematic characters
+	 * @param memoryName The original memory name
+	 * @return Sanitized memory name
 	 */
-	private PlanExecutionRecord createChatPlanRecord(String conversationId, ChatMessageWithTimestamp userMessage,
-			ChatMessageWithTimestamp assistantMessage, LocalDateTime startTime) {
-		PlanExecutionRecord record = new PlanExecutionRecord();
-
-		// Generate a unique currentPlanId for chat messages
-		// Format: "chat_{conversationId}_{timestamp}"
-		String chatPlanId = String.format("chat_%s_%d", conversationId,
-				startTime != null ? startTime.toEpochSecond(java.time.ZoneOffset.UTC) : System.currentTimeMillis());
-		record.setCurrentPlanId(chatPlanId);
-
-		// Set user request
-		record.setUserRequest(userMessage.getContent());
-
-		// Set start time
-		record.setStartTime(startTime != null ? startTime : LocalDateTime.now());
-
-		// Set end time and summary if assistant message exists
-		if (assistantMessage != null) {
-			record.setEndTime(assistantMessage.getTimestamp());
-			record.setSummary(assistantMessage.getContent());
-			record.setCompleted(true);
-		}
-		else {
-			// No assistant response yet (might be in progress)
-			record.setCompleted(false);
+	private String sanitizeMemoryName(String memoryName) {
+		if (memoryName == null || memoryName.trim().isEmpty()) {
+			return "Chat Conversation";
 		}
 
-		// Chat messages don't have rootPlanId (they're not plan executions)
-		record.setRootPlanId(null);
+		// Remove leading/trailing whitespace
+		String sanitized = memoryName.trim();
 
-		// Set title to indicate this is a chat message
-		record.setTitle("Chat Message");
+		// Limit length to avoid UI issues
+		if (sanitized.length() > 100) {
+			sanitized = sanitized.substring(0, 100) + "...";
+		}
 
-		return record;
+		// Remove newlines and excessive whitespace
+		sanitized = sanitized.replaceAll("\\s+", " ").trim();
+
+		// Ensure it's not empty after sanitization
+		if (sanitized.isEmpty()) {
+			return "Chat Conversation";
+		}
+
+		return sanitized;
 	}
 
 }
